@@ -341,6 +341,7 @@ private:
     Thread*                m_getDropTargetThread;
     String                    m_dropTarget;
 
+    void                      updateScrollDirection() override;
     // -1 for natural scrolling direction, 1 otherwise
     SInt32                    m_scrollDirection = 1;
     
