@@ -114,6 +114,11 @@ Screen::enter(KeyModifierMask toggleMask)
     // now on screen
     m_entered = true;
 
+    // Forcefully update scrolling direction
+    // Will keep clients updated when moving cursor
+    m_screen->allowScrollDirectionUpdate();
+    m_screen->updateScrollDirection();
+
     m_screen->enter();
     if (m_isPrimary) {
         enterPrimary();
@@ -128,6 +133,11 @@ Screen::leave()
 {
     assert(m_entered == true);
     LOG((CLOG_INFO "leaving screen"));
+
+    // Forcefully update scrolling direction
+    // Will keep server updated when moving cursor
+    m_screen->allowScrollDirectionUpdate();
+    m_screen->updateScrollDirection();
 
     if (!m_screen->leave()) {
         return false;
@@ -212,6 +222,11 @@ Screen::keyUp(KeyID, KeyModifierMask, KeyButton button)
 void
 Screen::mouseDown(ButtonID button)
 {
+	// No other convinient way to check if scroll direction was changed
+	// If mouse button is pressed is good enough indication to allow checking
+	// for scroll direction
+	m_screen->allowScrollDirectionUpdate();
+
     m_screen->fakeMouseButton(button, true);
 }
 
@@ -239,6 +254,9 @@ void
 Screen::mouseWheel(SInt32 xDelta, SInt32 yDelta)
 {
     assert(!m_isPrimary);
+    // update scroll direction if necessary
+    m_screen->updateScrollDirection();
+
     m_screen->fakeMouseWheel(xDelta, yDelta);
 }
 
